ferritin/src/snapshots/ferritin__tests__get_prefix_tests_glob_reexport_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::prefix_tests::deep::glob_reexport\"),\nOutputMode :: TestMode, & get_fixture_crate_path ())"
---
<metadata>
  <field name="Item">glob_reexport</field>
  <field name="Kind">Module</field>
  <field name="Visibility">Public</field>
  <field name="Defined at"><type-name>fixture_crate</type-name><punctuation>::</punctuation><type-name>prefix_tests</type-name><punctuation>::</punctuation><type-name>deep</type-name><punctuation>::</punctuation><type-name>glob_reexport</type-name></field>
  <field name="In crate">fixture-crate (0.1.0)</field>
</metadata>
<truncated level="full"><p>
Exercises the "glob brings a name into scope, then re-export that name" pattern, all within the same crate.</p>
</truncated>
<section><section-title>Modules</section-title><list>
  <item><p>
<type-name>deep</type-name> </p>
<truncated level="single-line"><p>
A nested module to exercise <inline-code>self::</inline-code>, <inline-code>super::</inline-code>, and <inline-code>super::super::</inline-code>.</p>
</truncated>
</item>
</list>
</section><section><section-title>Structs</section-title><list>
  <item><p>
<type-name>DocOuter</type-name> </p>
<truncated level="single-line"><p>
Intra-doc links from the outer module:</p>
 <elided chars="172"/></truncated>
</item>
  <item><p>
<type-name>GlobReexportedMarker</type-name> </p>
<truncated level="single-line"><p>
A sibling target for <inline-code>self::</inline-code> / <inline-code>super::PrefixMarker</inline-code> references.</p>
</truncated>
</item>
  <item><p>
<type-name>PrefixMarker</type-name> </p>
<truncated level="single-line"><p>
A sibling target for <inline-code>self::</inline-code> / <inline-code>super::PrefixMarker</inline-code> references.</p>
</truncated>
</item>
</list>
</section>
