ferritin/src/snapshots/ferritin__tests__get_prefix_tests_glob_reexport_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::prefix_tests::deep::glob_reexport\"),\nOutputMode :: Tty, & get_fixture_crate_path ())"
---
Item: glob_reexport
Kind: Module
Visibility: Public
Defined at: [fixture_crate](https://docs.rs/fixture-crate/0.1.0/fixture_crate/index.html)::[prefix_tests](https://docs.rs/fixture-crate/0.1.0/fixture_crate/prefix_tests/index.html)::[deep](https://docs.rs/fixture-crate/0.1.0/fixture_crate/prefix_tests/deep/index.html)::[glob_reexport](https://docs.rs/fixture-crate/0.1.0/fixture_crate/prefix_tests/deep/glob_reexport/index.html)
In crate: fixture-crate (0.1.0)

Exercises the "glob brings a name into scope, then re-export that name"
pattern, all within the same crate.

Modules

  ◦ [deep](https://docs.rs/fixture-crate/0.1.0/fixture_crate/prefix_tests/deep/index.html) 
    A nested module to exercise self::, super::, and super::super::.

Structs

  ◦ [DocOuter](https://docs.rs/fixture-crate/0.1.0/fixture_crate/prefix_tests/struct.DocOuter.html) 
    Intra-doc links from the outer module: [...]

  ◦ [GlobReexportedMarker](https://docs.rs/fixture-crate/0.1.0/fixture_crate/prefix_tests/struct.GlobReexportedMarker.html) 
    A sibling target for self:: / super::PrefixMarker references.

  ◦ [PrefixMarker](https://docs.rs/fixture-crate/0.1.0/fixture_crate/prefix_tests/struct.PrefixMarker.html) 
    A sibling target for self:: / super::PrefixMarker references.
